feat: making good progress moving it to jdk21